# communication_project

./: 01_prepare_corpus.ipynb  03_color_html.ipynb  README.md  pyproject.toml
src/: 01_prepare_corpus.ipynb  02_make_model.ipynb  03_color_html.ipynb  04_probabilities.ipynb  05_punchcard_discourse.ipynb  06_punchcard_discourse_onebyone.ipynb  07_statistics.ipynb  08_count_topics.ipynb
